--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,11 +30,11 @@ jobs:
           dotnet-version: '7'
 
       - name: Install dependencies
-        run: dotnet restore
+        run: dotnet restore "./PingPong/PingPong.csproj"
       - name: Build
-        run: dotnet build
+        run: dotnet build "./PingPong/PingPong.csproj"
       - name: Test with the dotnet CLI
-        run: dotnet test
+        run: dotnet test "./PingPong/PingPong.csproj"
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
