--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,7 +28,9 @@ jobs:
         with:
           # Optional SDK version(s) to use. If not provided, will install global.json version when available. Examples: 2.2.104, 3.1, 3.1.x, 3.x, 6.0.2xx
           dotnet-version: '7'
-
+      
+      - name: List files
+        run: ls
       - name: Install dependencies
         run: dotnet restore "../PingPong/PingPong.csproj"
       - name: Build
