--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,10 +16,13 @@ jobs:
         working-directory: PingPong
         
     steps:
+      - uses: actions/checkout@v3
+      
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v4.0.0
         with:
           dotnet-version: '7'
+        
           
       - name: Install dependencies
         run: dotnet restore "../PingPong/PingPong.csproj"
